<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layout_app"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/color_app">

        <FrameLayout
            android:id="@+id/name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="9dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="16dp"
                android:background="@color/color_app"
                android:src="@drawable/vector" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/name_app"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_search">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@color/white"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:backgroundTint="@color/white"
                android:maxLines="1"
                android:lines="1"
                android:hint="@string/search"
                android:textColor="@color/color_search"
                android:textSize="12sp" />
        </FrameLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/advertisement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_app"
        android:layout_marginTop="8dp"
        android:src="@drawable/ad" />

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/advertisement"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="20dp">

        <TextView

            android:id="@+id/all_documents"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/btn_AllDocuments"
            android:textColor="@color/color_text_tab"
            android:textSize="13sp" />

        <TextView

            android:id="@+id/recent"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/btn_Recent"
            android:textColor="@color/color_text_tab"
            android:textSize="13sp" />

        <TextView

            android:id="@+id/favourite"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/btn_Favourite"
            android:textColor="@color/color_text_tab"
            android:textSize="13sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_80sdp"
            android:background="@color/white"
            android:src="@drawable/ic_sort" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navigation_bar" >

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>