<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_app">
        <ImageButton
            android:id="@+id/com_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/color_app"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Settings"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/go_premium"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/layout_settings"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_settings"
        android:layout_marginHorizontal="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_go_premium"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_Go_Premium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remove ads &amp; Unlock all features"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_marginLeft="90dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color_app"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rate_app"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/go_premium"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_settings_1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_rate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_Rate_App"
            android:textColor="@color/color_text_files"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="217dp"
            android:background="@color/color_settings"
            android:src="@drawable/ic_next_1" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/rate_app"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_settings_1"
        android:layout_marginHorizontal="20dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Share_App"
            android:textSize="16sp"
            android:textColor="@color/color_text_files"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="210dp"
            android:src="@drawable/ic_next_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/share_app"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_settings_1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_language" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_Language"
            android:textColor="@color/color_text_files"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="212dp"
            android:background="@color/color_settings"
            android:src="@drawable/ic_next_1" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/language"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_settings_1"
        android:layout_marginHorizontal="20dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_feedback"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Feedback"
            android:textSize="16sp"
            android:textColor="@color/color_text_files"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="212dp"
            android:src="@drawable/ic_next_1"
            android:background="@color/color_settings"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/feedback"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_settings_1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_policy" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Privacy Policy"
            android:textColor="@color/color_text_files"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="181dp"
            android:src="@drawable/ic_next_1"
            android:background="@color/color_settings"/>
    </LinearLayout>
</RelativeLayout>